--- a/src/components/post-item/PostItem.module.css
+++ b/src/components/post-item/PostItem.module.css
@@ -1,10 +1,18 @@
 .post {
+    width: 100%;
     background: white;
     padding: 20px;
-    margin-bottom: 15px;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    max-width: 500px;
+}
+
+.post:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.post__author {
+    margin-bottom: 10px;
+    font-size: 16px;
 }
 
 .post__title {
@@ -18,10 +26,17 @@
 
 .comments {
     margin-top: 15px;
+}
+
+.comments__title {
+    margin-bottom: 20px;
+}
+
+.comments__list {
     padding-left: 15px;
 }
 
-.comment {
+.comments__item {
     background: #f1f1f1;
     padding: 10px;
     margin-bottom: 5px;
